# Geni_app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  response_options.json  ussd_generator.py  ussd_handling.py
